@@ -1,128 +1,90 @@
 package com.example.nexvent.service;
 
-import com.example.nexvent.dto.RegistrationResponse;
-import com.example.nexvent.exception.*;
+import com.example.nexvent.dto.RegistrationDto;
 import com.example.nexvent.model.*;
 import com.example.nexvent.repository.*;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
 
-import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class RegistrationService {
-    
-    private final EventRegistrationRepository registrationRepo;
-    private final EventRepository eventRepo;
-    private final UserRepository userRepo;
+    private final EventRepository events;
+    private final EventRegistrationRepository regs;
+    private final TicketService ticketService;
 
-    @Transactional
-    public RegistrationResponse registerForEvent(Long eventId, String userEmail) {
-        User user = userRepo.findByEmail(userEmail)
-                .orElseThrow(() -> new ResourceNotFoundException("User", 0L));
-        
-        Event event = eventRepo.findById(eventId)
-                .orElseThrow(() -> new ResourceNotFoundException("Event", eventId));
 
-        
-        var existing = registrationRepo.findByUserAndEvent(user, event);
-        if (existing.isPresent()) {
-            EventRegistration reg = existing.get();
-            if (reg.getStatus() == EventRegistration.Status.REGISTERED) {
-                throw new DuplicateRegistrationException("You are already registered for this event");
-            } else if (reg.getStatus() == EventRegistration.Status.CANCELLED) {
-                
-                reg.setStatus(EventRegistration.Status.REGISTERED);
-                reg.setRegisteredAt(Instant.now());
-                reg.setCancelledAt(null);
-                return toDto(registrationRepo.save(reg));
-            }
-        }
+    public RegistrationDto register(User user, Long eventId) {
+        Event event = events.findById(eventId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
 
-        
+        if (!event.isPublished())
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Event is not published");
+
+        if (regs.existsByUser_IdAndEvent_Id(user.getId(), eventId))
+            throw new ResponseStatusException(HttpStatus.CONFLICT, "Already registered");
+
         if (event.getCapacity() != null) {
-            long activeRegistrations = registrationRepo.countActiveRegistrationsByEvent(event);
-            if (activeRegistrations >= event.getCapacity()) {
-                throw new EventCapacityExceededException("Event has reached maximum capacity");
-            }
+            long taken = regs.countTakenSeats(eventId);
+            if (taken >= event.getCapacity())
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Capacity reached");
         }
 
-        
-        EventRegistration registration = new EventRegistration();
-        registration.setUser(user);
-        registration.setEvent(event);
-        registration.setStatus(EventRegistration.Status.REGISTERED);
-        registration.setRegisteredAt(Instant.now());
+        EventRegistration r = new EventRegistration();
+        r.setUser(user);
+        r.setEvent(event);
 
-        return toDto(registrationRepo.save(registration));
+        r.setUnitPrice(event.getPrice() == null ? 0L : event.getPrice());
+
+        r = regs.save(r);
+
+        return new RegistrationDto(r.getId(), event.getId(), event.getTitle(), r.getStatus().name(), r.getUnitPrice());
     }
 
-    @Transactional
-    public void cancelRegistration(Long eventId, String userEmail) {
-        User user = userRepo.findByEmail(userEmail)
-                .orElseThrow(() -> new ResourceNotFoundException("User", 0L));
-        
-        Event event = eventRepo.findById(eventId)
-                .orElseThrow(() -> new ResourceNotFoundException("Event", eventId));
+    public void cancel(User user, Long registrationId) {
+        EventRegistration r = regs.findById(registrationId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Registration not found"));
 
-        EventRegistration registration = registrationRepo.findByUserAndEvent(user, event)
-                .orElseThrow(() -> new ResourceNotFoundException("Registration not found"));
+        if (!r.getUser().getId().equals(user.getId()))
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN);
 
-        if (registration.getStatus() == EventRegistration.Status.CANCELLED) {
-            throw new BadRequestException("Registration is already cancelled");
-        }
-
-        registration.setStatus(EventRegistration.Status.CANCELLED);
-        registration.setCancelledAt(Instant.now());
-        registrationRepo.save(registration);
+        r.setStatus(EventRegistration.Status.CANCELED);
+        regs.save(r);
     }
 
-    public List<RegistrationResponse> getUserRegistrations(String userEmail) {
-        User user = userRepo.findByEmail(userEmail)
-                .orElseThrow(() -> new ResourceNotFoundException("User", 0L));
-        
-        return registrationRepo.findByUserOrderByRegisteredAtDesc(user)
-                .stream()
-                .map(this::toDto)
-                .collect(Collectors.toList());
+    public List<RegistrationDto> myRegistrations(User user) {
+        return regs.findByUser_Id(user.getId()).stream()
+                .map(r -> new RegistrationDto(r.getId(), r.getEvent().getId(), r.getEvent().getTitle(), r.getStatus().name(), r.getUnitPrice()))
+                .toList();
     }
 
-    public List<RegistrationResponse> getEventRegistrations(Long eventId) {
-        Event event = eventRepo.findById(eventId)
-                .orElseThrow(() -> new ResourceNotFoundException("Event", eventId));
-        
-        return registrationRepo.findByEventOrderByRegisteredAtDesc(event)
-                .stream()
-                .map(this::toDto)
-                .collect(Collectors.toList());
+    public List<RegistrationDto> forEvent(Long eventId, User organizer) {
+        Event event = events.findById(eventId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
+
+        if (!event.getOrganizer().getId().equals(organizer.getId()))
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN);
+
+        return regs.findByEvent_Id(eventId).stream()
+                .map(r -> new RegistrationDto(r.getId(), eventId, event.getTitle(), r.getStatus().name(), r.getUnitPrice()))
+                .toList();
     }
 
-    public boolean isUserRegistered(Long eventId, String userEmail) {
-        User user = userRepo.findByEmail(userEmail).orElse(null);
-        Event event = eventRepo.findById(eventId).orElse(null);
-        
-        if (user == null || event == null) {
-            return false;
-        }
-        
-        return registrationRepo.existsByUserAndEventAndStatus(
-                user, event, EventRegistration.Status.REGISTERED);
+    public void markPaid(Long registrationId, User organizer) {
+        EventRegistration r = regs.findById(registrationId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Registration not found"));
+
+        if (!r.getEvent().getOrganizer().getId().equals(organizer.getId()))
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN);
+
+        r.setStatus(EventRegistration.Status.PAID);
+        regs.save(r);
+
+        ticketService.issueFor(r);
     }
 
-    private RegistrationResponse toDto(EventRegistration r) {
-        return new RegistrationResponse(
-                r.getId(),
-                r.getEvent().getId(),
-                r.getEvent().getTitle(),
-                r.getUser().getId(),
-                r.getUser().getFullName(),
-                r.getStatus().name(),
-                r.getRegisteredAt() != null ? r.getRegisteredAt().toString() : null,
-                r.getCancelledAt() != null ? r.getCancelledAt().toString() : null
-        );
-    }
 }
